Fixed some window resizing issues: 1) horizontal scroll with sticky header 2)elements no longer move around when resizing

--- a/css/content_style.css
+++ b/css/content_style.css
@@ -53,7 +53,7 @@
 {
 /*	background-image: linear-gradient(to top, #FFFFFF 0%, #C7C7C7 150%);
 	border-top: #990000 solid 9px ;
-*/	margin-top: 100px;
+*/	margin: 200px 0;
 	height:100px;
 }
 
@@ -72,20 +72,12 @@
 	box-shadow: 1px 1px 5px 1px;
 /*	box-shadow: 2px 2px 25px 1px;
 */	z-index:9;
+	float:right;
 }
 #map_canvas #info_window
 {
 	font-family:"Times New Roman", Times, serif;
 	width:102px;
 	height:auto;
-}
-#phone_number_area
-{
-	display: inline;	
-	font-size: 30px;
-	position:relative;
-	top:-70px;
-	color:#990000;
-	padding:10px;
 }
 
