--- a/css/global_style.css
+++ b/css/global_style.css
@@ -3,7 +3,6 @@
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
-		  
 }
 
 .anchor
@@ -22,8 +21,9 @@ body
 	border:0;
 	background-image:url("../images/bg1.png");
 	/*font-family:"Arial", "Verdana", Times, serif;*/
+	min-width:1300px;
+	font-size:100%;
 }
-
 a
 {
 	text-decoration: none;
