--- a/css/page_header_style.css
+++ b/css/page_header_style.css
@@ -4,6 +4,7 @@ header
 	margin:0;
 	position:fixed;
 	top:0;
+	left:0;
 	width:100%;
 	height:100px;
 	z-index: 10;
@@ -12,6 +13,7 @@ header
 	/* background-image: radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #C7C7C7 100%); */
 	/* background-color:black; */
 	font-family: "Verdana", Times, serif;
+	min-width:1300px;
 }
 
 #header_logo
@@ -20,17 +22,16 @@ header
 	height:147px;
 	padding:0;
 	margin:-20px 0 0 -50px;
+	float:left;
 }
 
 /* header nav ul li #navitem */
 header nav
 {
-	float:right;
-	
 	margin:0;
 	padding:0;
 	font-size:0;
-	
+	float:right;
 }
 
 header nav ul
@@ -74,3 +75,10 @@ header nav ul li #nav-item:hover
 }
 
 
+#phone_number_area
+{
+	font-size: 30px;
+	color:#990000;
+	padding:10px;
+	float:left;
+}
